--- a/index.html
+++ b/index.html
@@ -2,45 +2,6 @@
 <html lang="ja">
 <head>
 	<meta charset="UTF-8">
-<<<<<<< HEAD
-	<title>Document</title>
-<link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
-<link rel="stylesheet" href="https://use.typekit.net/dnf0qsh.css">	
-<link rel="stylesheet" href="https://use.typekit.net/rpd7crq.css">
-<link rel="stylesheet" href="https://use.typekit.net/jsd1nvl.css">
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-</head>
-<body>
-
-<script>
-$(function() {
-  var h = $(window).height();
-  $('#wrap').css('display','none');
-  $('#loader-bg ,#loader').height(h).css('display','block');
-});
- 
-$(window).load(function () { //全ての読み込みが完了したら実行
-  $('#loader-bg').delay(900).fadeOut(800);
-  $('#loader').delay(600).fadeOut(300);
-  $('#wrap').css('display', 'block');
-});
- 
-//2秒たったら強制的にロード画面を非表示
-$(function(){
-  setTimeout('stopload()',2000);
-});
- 
-function stopload(){
-  $('#wrap').css('display','block');
-  $('#loader-bg').delay(900).fadeOut(800);
-  $('#loader').delay(600).fadeOut(300);
-}
-</script>
-<!--bxslider START-->
-<script type="text/javascript" src="{{ app.config.front_urlpath }}/js/jquery.bxslider.js"></script>
-<!--bxslider END-->
-<script type="text/javascript" src="{{ app.config.front_urlpath }}/js/jquery.inview.min.js"></script>	
-=======
 	<meta name="viewport" content="width=device-width,initial-scale=1">
 	<title>Document</title>
 	<link rel="stylesheet" href="https://use.typekit.net/jsd1nvl.css">
@@ -65,7 +26,58 @@ function stopload(){
 			<!-- 追従サイドバー -->
 			<div class="sidebar_area">
 				<div>
-					
+					<ul>
+						<li>
+							<div>
+								logo
+							</div>
+						</li>
+						<li>
+							<div>
+								ABOUT
+							</div>
+						</li>
+						<li>
+							<div>
+								PRODUCT
+							</div>
+						</li>
+						<li>
+							<div>
+								NEWS
+							</div>
+						</li>
+						<li>
+							<div>
+								ACCESS
+							</div>
+						</li>
+						<li>
+							<div>
+								RAKUTEN STORE
+							</div>
+						</li>
+						<li>
+							<div>
+								ONLINE STORE
+							</div>
+						</li>
+						<li>
+							<div>
+								CONTACT
+							</div>
+						</li>
+						<li>
+							<div>
+								03-6809-0553
+							</div>
+						</li>
+						<li>
+							<div>
+								SNS
+							</div>
+						</li>
+					</ul>
 				</div>
 			</div>
 
@@ -73,12 +85,26 @@ function stopload(){
 			<div class="main_content_area">
 				<!-- メインビジュアル -->
 				<div id="mv">
-					<div class="bg">
+					<div class="mv_bg01">
+						<img src="./img/mv_vertical_logo.png" alt="">
+					</div>
+					<div class="mv_bg02">
+						<img src="./img/mv_caption.png" alt="">
+					</div>
+					<div class="mv_bg03">
 						<img src="./img/mv_01.jpg" alt="">
 					</div>
 				</div>
 				<!-- BANNER -->
-				<div></div>
+				<div id="banner_area">
+					<div class="banner_area_inner">
+						
+					</div>
+					<div class="banner_area_inner">
+						<div></div>
+						<div></div>
+					</div>
+				</div>
 				<!-- YOUTUBE -->
 				<div></div>
 				<!-- ABOUT -->
@@ -100,6 +126,5 @@ function stopload(){
 <!--bxslider END-->
 <script type="text/javascript" src="{{ app.config.front_urlpath }}/js/jquery.inview.min.js"></script>
 <script type="text/javascript" src="./js/script.js"></script>
->>>>>>> c68cd386d64c097376428649c443be5b4e3c15c6
 </body>
 </html>
